resources/rook-ceph-1.3/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/server-snippet: |
#      proxy_ssl_verify off;
spec:
  rules:
    - host: ceph.vvv.run
      http:
        paths:
          - path: /
            backend:
              serviceName: rook-ceph-mgr-dashboard
              servicePort: 7000
